# Ambient-AI-VCP-System

./: .dockerignore  .env.example  .gitignore  AILEE_INTEGRATION_SUMMARY.md  ANNOUNCEMENT.md  CHANGELOG.md  CHANGES_SUMMARY.md  CITATION.cff  Cargo.toml  Dockerfile  FIX_UPDATE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.4.0.md  RENDER_DEPLOYMENT.md  RENDER_FIX.md  ROBUSTNESS_ANALYSIS.md  SOCIAL_MEDIA_GUIDE.md  TASK_SECURITY_REVIEW.md  deploy-global-node.sh  docker-compose.yml  internet-node-assessment.md  render.yaml
.github/workflows/: ci.yml
archive/: README_OLD.md
crates/ailee-trust-layer/: Cargo.toml
crates/ailee-trust-layer/src/: consensus.rs  generation.rs  lib.rs  metric.rs  trust.rs
crates/ambient-node/: Cargo.toml
crates/ambient-node/src/: ailee_integration.rs  feen.rs  gateway.rs  health.rs  lib.rs  observability.rs  offline.rs  reputation.rs  telemetry.rs
crates/ambient-node/src/ailee/: adapters.rs  consensus.rs  mod.rs  trust.rs
crates/ambient-node/src/connectivity/: mod.rs
crates/ambient-node/src/connectivity/backhaul/: discovery.rs  health.rs  mod.rs  relay_qos.rs  routing.rs  scoring.rs  state_machine.rs
crates/ambient-node/src/connectivity/hotspot/: ap_mode.rs  mod.rs  qos.rs  security.rs
crates/ambient-node/src/connectivity/tether/: bluetooth.rs  mod.rs  usb.rs
crates/ambient-node/tests/: ailee_integration_test.rs  feen_test.rs  simulation_test.rs
crates/api-server/: Cargo.toml  README.md  SECURITY.md  package.json
crates/api-server/assets/: index.html  swagger.html
crates/api-server/assets/fonts/: fonts.css
crates/api-server/migrations/: 20240101000000_initial_schema.sql  20240102000000_add_node_ownership.sql  20240103000000_add_refresh_tokens.sql  20240104000000_add_task_runs.sql  20240105000000_add_proof_artifacts.sql  20240106000000_add_api_keys.sql  20240107000000_add_audit_log.sql  20240108000000_add_node_heartbeat_history.sql  20240109000000_harden_key_storage.sql  20240216000000_add_node_ownership_and_heartbeat.sql  20240216000100_fix_initial_schema_changes.sql  20260216000000_add_task_creator_and_email_notifications.sql  20260216000001_backfill_task_creator_for_legacy_tasks.sql  20260217000000_add_task_assignment_disconnected_at.sql  20260217010000_add_connect_sessions.sql  20260218000000_add_observability_port.sql  20260220000000_add_task_assignment_execution_status.sql  20260220000001_add_connect_session_token_cleartext.sql
crates/api-server/scripts/: setup-fonts.js
crates/api-server/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  rate_limit.rs  state.rs
crates/api-server/src/middleware/: auth.rs  cors.rs  headers.rs  logging.rs  metrics.rs  mod.rs
crates/api-server/tests/: integration_test.rs  load_test.rs  migration_sql_smoke.rs
crates/api-server/tests/common/: mod.rs
crates/bitcoin-anchor/: Cargo.toml
crates/bitcoin-anchor/src/: commitment.rs  lib.rs  peg.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/federated-learning/: Cargo.toml
crates/federated-learning/src/: aggregator.rs  lib.rs  privacy.rs
crates/federated-learning/tests/: simulation_test.rs
crates/mesh-coordinator/: Cargo.toml
crates/mesh-coordinator/src/: assignment.rs  lib.rs  peer_routing.rs  registry.rs  settlement.rs
crates/mesh-coordinator/tests/: simulation_test.rs
crates/wasm-engine/: Cargo.toml
crates/wasm-engine/src/: lib.rs  limits.rs  sandbox.rs  trace.rs
crates/zk-prover/: Cargo.toml
crates/zk-prover/src/: lib.rs  prover.rs  verifier.rs
dashboard/: index.html
demo/: README.md  run-demo.sh
docs/: AILEE_INTEGRATION.md  AILEE_SECURITY_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  CLONER_BENEFITS_ANALYSIS.md  CLONER_BENEFITS_SUMMARY.md  CONNECTIVITY_INTEGRATION.md  CONNECTIVITY_SAFETY.md  CONNECTIVITY_SUMMARY.md  CONTRIBUTING.md  DASHBOARD_AUTH.md  DEPLOYMENT.md  GATEWAY_DATA_PLANE.md  GETTING_STARTED.md  GLOBAL_NODE_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_DECISION.md  NODES_AND_TASKS_GUIDE.md  NODE_SECURITY.md  PHASE1_SUMMARY.md  PHASE2.md  PHASE2_SUMMARY.md  QUICK_REFERENCE.md  RELEASE_NOTES_2.6.0.md  RELEASE_NOTES_2.8.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v2.5.0.md  RENDER_DEPLOYMENT.md  SECURITY_REPORT.md  TESTING_SUMMARY.md  USER_BENEFITS.md  WHO_CREATES_TASKS.md  ZK_PROOFS.md
docs/whitepapers/: AMBIENT_AI.md  VCP.md  VCP_AMBIENT_AI_ASSESSMENT.md
examples/hello-compute/: README.md
feen-changes/: api_extension.py
feen-changes/include/feen/: vcp_integration.h
feen-changes/python/feen/: vcp.py
scripts/: deploy-global-node.sh
v0.3-reference/: .gitignore  README.md  ambient-client.js  ambient-ledger.js  ambient-node.js  circuit.circom  package.json  setup.js
wasm-modules/: README.md
