[workspace]
members = [
    "crates/ambient-node",
    "crates/wasm-engine",
    "crates/zk-prover",
    "crates/mesh-coordinator",
    "crates/federated-learning",
    "crates/cli",
    "crates/api-server", "crates/ailee-trust-layer",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Don Michael Feeney Jr."]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography
sha3 = "0.10"
ring = "0.17"

# Networking
libp2p = "0.53"

# Metrics
prometheus = "0.13"

# WASM Runtime
wasmedge-sdk = "0.13"

# Testing
proptest = "1.4"
