[package]
name = "ailee-trust-layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AILEE Trust Layer - External generative intelligence, trust scoring, consensus, and lineage tracking"

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Cryptography (for hashing)
sha3.workspace = true
