[package]
name = "ambient-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
sha3.workspace = true

# Node-specific dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }

ring.workspace = true
hex = "0.4"

chrono = { version = "0.4", features = ["clock"] }
