[package]
name = "ambient-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
# Optional local observability interface (disabled by default)
# Enables operator-only, privacy-preserving node status inspection
observability = ["dep:axum"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
sha3.workspace = true

# AILEE Trust Layer - external dependency
ailee-trust-layer = { path = "../ailee-trust-layer" }

# Node-specific dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }

ring.workspace = true
hex = "0.4"

chrono = { version = "0.4", features = ["clock"] }

# Optional dependency for observability feature
axum = { version = "0.7", optional = true }

# HTTP Client for FEEN integration
reqwest = { version = "0.11", features = ["json"] }
