[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Internal crates
ambient-node = { path = "../ambient-node" }
mesh-coordinator = { path = "../mesh-coordinator" }
zk-prover = { path = "../zk-prover" }
federated-learning = { path = "../federated-learning" }
wasm-engine = { path = "../wasm-engine" }

# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# API utilities
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Additional utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"

# Random number generation (for API keys and rate limiting)
rand = "0.8"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
