[package]
name = "bitcoin-anchor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bitcoin.workspace = true
sha3.workspace = true

# For hex encoding
hex = "0.4"
