[package]
name = "federated-learning"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# For numeric operations
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
