[package]
name = "zk-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha3.workspace = true

# For now, we'll use a placeholder for ZK proofs
# In production, uncomment one of these:
# risc0-zkvm = "0.21"
# plonky2 = "0.2"
