[package]
name = "zk-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha3.workspace = true
tracing.workspace = true

# Production-ready ZK proof system (Groth16)
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-crypto-primitives = "0.5"
ark-snark = "0.5"
blake2 = "0.10"
rand = "0.8"
